--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@czechitas/render": "^0.3.1"
   },
   "devDependencies": {
-    "vite": "^4.4.11",
-    "glob": "^10.3.0"
+    "glob": "^10.3.0",
+    "prettier": "3.6.2",
+    "vite": "^4.4.11"
   }
 }
